--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,24 @@
-name: Python application test with Github Actions
+name: CI Python
 
-on: [push]
+on:
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+  workflow_dispatch:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.10.18
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.10.18
-    - name: Install dependencies
-      run: |
-        make install
-    - name: Lint with pylint
-      run: |
-        make lint
-    - name: Test with pytest
-      run: |
-        make test
-    - name: Format with Python Black
-      run: |
-        make format
+      - uses: actions/checkout@v3
+
+      - name: install package
+        run: make install
+
+      - name: lint
+        run: make lint
+
+      - name: format
+        run: make format
