Added testing action into the library

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,8 @@ jobs:
       - name: lint
         run: make lint
 
+      - name: test
+        run: make test
+
       - name: format
         run: make format
